# dinossaurinho-game

./: README.md  dinos.json  pyproject.toml
src/app/: __main__.py
